# asr-linux-dictation

./: .coverage  .env.example  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  GSD-流程图.md  README.md  package-lock.json  package.json  postcss.config.js  pyproject.toml  tsconfig.json  vite.renderer.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  frontend-refactor-plan.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/graphs/: .last-build-snapshot.json  GRAPH_REPORT.md  graph.html  graph.json
.planning/phase-1/: PLAN.md
.planning/phase-10/: 10-PLAN.md
.planning/phase-11/: 11-PLAN.md
.planning/phase-2/: PLAN.md
.planning/phase-3/: PLAN.md
.planning/phase-5/: PLAN.md
.planning/phase-6/: 06-CONTEXT.md  06-PLAN.md
.planning/phase-7/: 07-CONTEXT.md  07-PLAN.md
.planning/phase-8/: 08-CONTEXT.md  08-PLAN.md
.planning/phase-9/: 09-CONTEXT.md  09-PLAN.md
.planning/research/: SUMMARY.md
docs/: README.md  asr-linux-overview.html  design-system.md  frontend-redesign-plan.md  logging.md  modules.md  phase-6-experience-notes.md  phases.md  plugin-system.md  smoke.md  tdd.md
scripts/: smoke_dictation.py
src/backend/: __init__.py  asr_client.py  audio_recorder.py  autostart.py  clipboard_manager.py  config.py  config_store.py  database.py  diagnostics.py  dictation_orchestrator.py  history_store.py  (+24 more)
(+114 files in other folders)
