[project]
name = "asr-linux"
version = "0.2.0"
description = "Linux desktop voice input app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "pypinyin>=0.53.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/backend"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "real_api: tests that call real cloud APIs",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "pytest-cov>=7.1.0",
]
